Tried to fix the styles so the PDF guide doesn't cut off a whole load of text at the right margin. Also made changes to PdfBuilder so that it's less hard-coded to the directory structure of GRAILS_HOME. In fact, GRAILS_HOME is no longer needed.

--- a/src/grails/docs/css/pdf.css
+++ b/src/grails/docs/css/pdf.css
@@ -90,25 +90,36 @@ h1, h2, h3, h1>a, h2>a, h3>a {
     font-style: normal;
 }
 
+#col2 {
+    width: 0px;
+}
+
+#col2 .local {
+    display: none;
+}
+
 div.title {
     font-size: 20px;
 }
 
 .body {
-    font-size: 14px;
+    font-size: 12pt;
 }
 
-pre .code {
+.code pre {
+    text-align: left;
     padding-left:5px;
-    font-size: 12px;
+    font-size: 10pt;
     line-height: 100%;
-    white-space: normal;
+    white-space: pre-wrap;
     page-break-inside: avoid;
 }
 
 .code, .bq {
+    text-align: left;
     margin-bottom: 2em;
     page-break-inside: avoid;
+    white-space: pre-wrap;
 }
 
 .warning, .note{
